--- a/.env.dist
+++ b/.env.dist
@@ -13,7 +13,9 @@ APP_SECRET=7b223ecd226a65ab51c2bd9be47e53a9
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+# DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:secret@backend-mysql:3306/blog
+DATABASE_TEST_URL=mysql://root:secret@backend-mysql:3306/blog_test
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
@@ -32,3 +34,5 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=c55ec2d009525bdb8b8f09c8daf90464
 ###< lexik/jwt-authentication-bundle ###
+FILES_UPLOAD_PATH=%kernel.project_dir%/../storage/public/files
+FILES_UPLOAD_URL=http://127.0.0.1:8081/files
