--- a/.env.dist
+++ b/.env.dist
@@ -36,3 +36,7 @@ JWT_PASSPHRASE=c55ec2d009525bdb8b8f09c8daf90464
 ###< lexik/jwt-authentication-bundle ###
 FILES_UPLOAD_PATH=%kernel.project_dir%/../storage/public/files
 FILES_UPLOAD_URL=http://127.0.0.1:8081/files
+
+###> php-amqplib/rabbitmq-bundle ###
+RABBITMQ_URL=amqp://rabbit:rabbit@rabbitmq:5672
+###< php-amqplib/rabbitmq-bundle ###
