--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "jms/serializer-bundle": "^2.4",
         "lexik/jwt-authentication-bundle": "^2.5",
         "nelmio/cors-bundle": "^1.5",
+        "php-amqplib/rabbitmq-bundle": "^1.14",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
