--- a/.env.dist
+++ b/.env.dist
@@ -30,9 +30,7 @@ CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=c55ec2d009525bdb8b8f09c8daf90464
+JWT_PASSPHRASE=12345
 ###< lexik/jwt-authentication-bundle ###
 FILES_UPLOAD_PATH=%kernel.project_dir%/../storage/public/files
 FILES_UPLOAD_URL=http://127.0.0.1:8081/files
